--- a/styles.css
+++ b/styles.css
@@ -5,33 +5,47 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #282c34;
-    color: #fff;
-    font-family: Arial, sans-serif;
+    background-color: #333;
 }
 
 .keys {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    max-width: 800px;
+    transition: all 0.1s;
 }
 
 .key {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: 100px;
-    background-color: #61dafb;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 24px;
-    text-transform: uppercase;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s, transform 0.2s;
+    border: 0.4rem solid #333;
+    margin: 1rem;
+    padding: 1rem 0.5rem;
+    transition: transform 0.05s;
+    width: 10rem;
+    font-size: 2rem;
+    text-align: center;
+    color: white;
+    background: rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0 0.5rem black;
 }
 
-.key:active {
-    background-color: #21a1f1;
-    transform: scale(0.95);
+kbd {
+    display: block;
+    font-size: 1.5rem;
+}
+
+.sound {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+}
+
+.playing {
+    transform: scale(1.1);
+    border-color: #ffc600;
+    box-shadow: 0 0 1rem #ffc600;
+}
+
+audio {
+    display: none;
 }
